# urbit-webhook-funnel

./: .gitignore  Cargo.toml  README.md  setup.sh
src/: config.rs  gitlab.rs  main.rs  parser.rs
