[package]
name = "urbit-webhook-funnel"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json                        = "0.12.4"
sincere                     = "0.6.6"
urbit-http-api              = "0.1.5"
openssl                     = { version = "0.10", features = ["vendored"] }
yaml-rust                   = "0.4.5"
crossbeam                   = "0.8.0"


